# llm-review-sdk

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/agents/: mod.rs
src/inference/: mod.rs
src/inference/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/integration/: mod.rs
src/rules/: mod.rs
src/server/: mod.rs  types.rs
src/workflow/: mod.rs
src/zip_project/: extractor.rs  mod.rs  tree.rs
